--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 ]
 dependencies = [
   "matplotlib",
+  "corner",
   "networkx",
   "numpy",
   "scipy",
@@ -49,4 +50,3 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
-
